<resources>
    <string name="app_name">BusinessCard</string>
    <string name="app_title">Bussines Card App</string>
    <string name="lblName">Nome</string>
    <string name="lblCompany">Empresa</string>
    <string name="lblPhone">Telefone</string>
    <string name="lblEmail">Email</string>
    <string name="lblColor">Cor</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="new_card">Novo Cartão</string>
    <string name="lbl_success">Realizado com Sucesso</string>
    <string name="saving">Salvando</string>
    <string name="label_share_to">Compartilhar</string>
</resources>
